Rewards component grid setup with some issues regarding background div and circle's gap left

--- a/src/components/rewardbar/rewardsbar.styles.scss
+++ b/src/components/rewardbar/rewardsbar.styles.scss
@@ -1,14 +1,20 @@
 .rewards_row{
     // background-color: #80461B;
-    margin-top: 200px;
+    //margin-top: 200px;
    
  }
  .child_div{
 
-    height: 30px;
+    //height: 30px;
 
-    background-color: #FFFFFF;
+    // background-color: #FFFFFF;
         position: relative;
-        top: -180px;
+        //top: -180px;
       
  }
+ .reward_background_div{
+    background-color: #FFFFFF;
+    height: 32.31px;
+ 
+ }
+
